export const snapshot = {};

snapshot[`slugify_urls plugin 1`] = `3`;

snapshot[`slugify_urls plugin 2`] = `
{
  formats: [
    {
      engine: true,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: true,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: false,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      ext: ".json",
    },
    {
      engine: true,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`slugify_urls plugin 3`] = `
[
]
`;

snapshot[`slugify_urls plugin 4`] = `
{
  content: "<p>Page 2</p>
",
  data: {
    content: "Page 2
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/chourizos-ao-vino/",
  },
  dest: {
    ext: ".html",
    path: "/chourizos-ao-vino/index",
  },
  src: {
    ext: ".md",
    path: "/Chourizos ao viño",
  },
}
`;

snapshot[`slugify_urls plugin 5`] = `
{
  content: "<p>Page 1</p>
",
  data: {
    content: "Page 1
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/page-1/index",
  },
  src: {
    ext: ".md",
    path: "/Page 1",
  },
}
`;

snapshot[`slugify_urls plugin 6`] = `
{
  content: "<p>Page 3</p>
",
  data: {
    content: "
Page 3
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/paxina-numero/tres/",
  },
  dest: {
    ext: ".html",
    path: "/paxina-numero/tres/index",
  },
  src: {
    ext: ".md",
    path: "/page-3",
  },
}
`;
